--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,43 @@
+@import url('https://fonts.googleapis.com/css2?family=Gentium+Book+Plus:ital,wght@0,400;0,700;1,400&display=swap');
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-
+html {
+  font-size: 62.5%;
+  font-family: 'Gentium Book Plus', serif;
+}
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.navbar {
+  width: 100%;
+  height: 10vh;
+  display: flex;
+  justify-content: space-around;
+  border: 1px solid #000;
+  align-items: center;
+  font-size: 1.6rem;
+  font-family: 'Gentium Book Plus', serif;
+}
+
+.navbar-links {
+  display: flex;
+  list-style: none;
+  gap: 2rem;
+}
+
+.main {
+  height: 90vh;
+  width: 100%;
+  display:flex;
+  justify-content: center;
+  align-items: center;
 }
