--- a/src/index.css
+++ b/src/index.css
@@ -1,43 +1,36 @@
-@import url('https://fonts.googleapis.com/css2?family=Gentium+Book+Plus:ital,wght@0,400;0,700;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,700;0,900;1,400;1,500&display=swap');
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+
+:root {
+  --ruler: 1.6rem;
+  --color-bg: #ebecf0;
+  --color-white: #fff;
+}
+
 html {
   font-size: 62.5%;
-  font-family: 'Gentium Book Plus', serif;
+  font-family: 'Montserrat', sans-serif;
+  color: #333;
 }
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-.navbar {
-  width: 100%;
-  height: 10vh;
-  display: flex;
-  justify-content: space-around;
-  border: 1px solid #000;
-  align-items: center;
   font-size: 1.6rem;
-  font-family: 'Gentium Book Plus', serif;
-}
-
-.navbar-links {
-  display: flex;
-  list-style: none;
-  gap: 2rem;
+  background-color: hsl(0, 0%, 99%);
 }
 
 .main {
-  height: 90vh;
-  width: 100%;
-  display:flex;
+  min-height: 88vh;
+  display: flex;
   justify-content: center;
   align-items: center;
 }
