--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -116,7 +116,8 @@
   -webkit-filter: brightness(1.1);
 }
 
-.viewButtons {
-  display: flex;
-  gap: rem;
+@media screen and (max-width: 890px) {
+  .post button {
+    width: 60%;
+  }
 }
