--- a/src/components/Nav.module.css
+++ b/src/components/Nav.module.css
@@ -34,3 +34,10 @@
   color: #fff;
   font-weight: 400;
 }
+
+@media screen and (max-width: 890px) {
+  .navbar {
+    flex-direction: column;
+    min-height: 15vh;
+  }
+}
