--- a/src/components/Profile.module.css
+++ b/src/components/Profile.module.css
@@ -1,11 +1,16 @@
-.profile {
-  padding: 2rem;
+.profile-section {
   width: 70%;
+  padding: 2rem;
+}
+
+.profile {
   display: flex;
   flex-direction: column;
   gap: 1rem;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
   margin: 2rem 0;
+  padding: 2rem;
+  position: relative;
 }
 
 .profile h1 {
@@ -20,6 +25,14 @@
   -webkit-background-clip: text;
   color: transparent;
   letter-spacing: 2px;
+}
+
+.profile img {
+  width: 6rem;
+  height: 6rem;
+  position: absolute;
+  right: 3rem;
+  top: 3rem;
 }
 
 .information {
