--- a/src/components/Update.module.css
+++ b/src/components/Update.module.css
@@ -6,6 +6,10 @@
   --color-white: #fff;
 }
 
+.update-section {
+  width: 40%;
+}
+
 .form-updatePost {
   display: flex;
   flex-direction: column;
@@ -15,7 +19,7 @@
   font-family: 'Montserrat', sans-serif;
   padding: 2rem;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  width: 40%;
+
   border-radius: 10px;
   margin: 1rem 0;
 }
