--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -127,7 +127,7 @@
 
 .plus {
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   align-items: center;
   padding: 0, 4rem;
   position: relative;
