new nav bar in-progress

--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -36,7 +36,7 @@
   transition: all 0.2s ease-in-out;
   appearance: none;
   -webkit-appearance: none;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 .posts-search input:focus {
@@ -79,7 +79,7 @@
   color: #ffffff;
   cursor: pointer;
   display: inline-block;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 1.5rem;
   font-weight: 700;
   letter-spacing: 0.8px;
@@ -107,7 +107,7 @@
   border-radius: 16px;
   border-width: 0 0 4px;
   bottom: -4px;
-  content: '';
+  content: "";
   left: 0;
   position: absolute;
   right: 0;
@@ -123,6 +123,14 @@
 .post button:hover:not(:disabled) {
   filter: brightness(1.1);
   -webkit-filter: brightness(1.1);
+}
+
+.post button:disabled {
+  background-color: #999;
+}
+
+.post button:disabled::after {
+  background-color: #999;
 }
 
 .plus {
