--- a/src/components/AddPost.module.css
+++ b/src/components/AddPost.module.css
@@ -90,3 +90,9 @@ input {
   border-bottom: 1px solid #f03e3e;
   color: #212529;
 }
+
+@media screen and (max-width: 800px) {
+  .form-newPost {
+    width: 65%;
+  }
+}
